<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    tools:context=".fragments.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_margin="8dp"
        android:orientation="vertical">
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/recipe_description_video"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="240dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/textColor"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/step_description_detail_textview"
        tools:text="step explanation"/>
    </LinearLayout>

</RelativeLayout>