<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/backgroundColor">

<android.support.v7.widget.RecyclerView
    android:id="@+id/recipe_name_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</android.support.v7.widget.RecyclerView>

<TextView
    android:id="@+id/empty_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/no_internet_connection"
    android:textColor="@android:color/white"
    android:textAppearance="?android:textAppearanceMedium"
    android:visibility="gone" />

</FrameLayout>