...
            android:id="@+id/steps_line"
            android:background="@color/textColor"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_steps_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/steps_line"
            android:paddingBottom="4dp"
            android:clipToPadding="false"
            android:focusable="false">
...
